# sec-audit-mcp

./: README.md  pyproject.toml
secaudit/: entropy.py  frameworks.py  models.py  reporter.py  scanners.py  server.py
