[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-audit-mcp"
version = "0.1.0"
description = "Security audit MCP server — CASP+ technical depth, CCSP cloud controls, CISA compliance mapping, CISM risk reporting"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0",
    "pydantic>=2.5",
    "rich>=13.0",
]

[project.scripts]
sec-audit-mcp = "secaudit.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secaudit*"]
